--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <script type="text/javascript" src="https://cdn.rawgit.com/takahirox/nes-js/v0.0.1/build/nes.min.js"></script>
     <script type="text/javascript">
         function init() {
-            var url = 'Contra.nes';
+            var url = 'road.nes';
             var request = new XMLHttpRequest();
             request.responseType = 'arraybuffer';
 
