--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <script type="text/javascript" src="https://cdn.rawgit.com/takahirox/nes-js/v0.0.1/build/nes.min.js"></script>
     <script type="text/javascript">
         function init() {
-            var url = 'road.nes';
+            var url = 'e.nes';
             var request = new XMLHttpRequest();
             request.responseType = 'arraybuffer';
 
@@ -54,6 +54,7 @@
                 d="M54.461,27.054C51.956,27.326,50,29.423,50,32c0,9.925-8.075,18-18,18	c-2.577,0-4.674,1.957-4.946,4.461C28.648,54.81,30.301,55,32,55c12.703,0,23-10.297,23-23C55,30.301,54.81,28.648,54.461,27.054z"
                 opacity=".15"></path>
         </svg>danielm2402</p>
+    <h3 style="color: #fff; display: flex; align-items: center;"> Teclas para jugar: Enter, X, ←, →, ↑, ↓</h3>
 </body>
 
 </html>
